# Agentic-Enterprises-A

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: test.yml
.superpowers/sdd/: final-review-fixes-report.md
docs/: Agentic-First-Enterprises.md  Anatomy-of-a-Run.md  Build-Spec.md  Cell-Constitution.md  Component-Selection.md  Demo-Walkthrough.md  Handbrake-Interface.md  M0-Implementation-Notes.md  One-Cell-Build-Plan.md  Role-Contracts.md  Using-a-Cell.md
docs/superpowers/plans/: 2026-06-27-end-to-end-composition.md  2026-06-27-real-runtime-executor.md
docs/superpowers/specs/: 2026-06-27-cost-and-reentry-design.md  2026-06-27-end-to-end-composition-design.md  2026-06-27-observability-inspector-design.md  2026-06-27-optimizer-design.md  2026-06-27-real-runtime-executor-design.md  2026-06-27-versions-enabler-design.md  2026-06-28-m9a-amendment-design.md  2026-06-28-m9b-auditor-design.md  2026-06-28-m9c-breaker-design.md
src/cell/: auditor.py  autonomy.py  cell.py  demo.py  flow.py  handbrake.py  live.py  observe.py  optimize.py  steward.py  versions.py
src/cell/domain/: objects.py
src/cell/effects/: wrapper.py
src/cell/planes/: control.py  governance.py  memory.py  observability.py
src/cell/roles/: contracts.py  reference.py
src/cell/runtime/: README.md  deliver.py  real_executor.py  real_verifier.py  runner.py  sanitize.py
tests/: _flow_crash_worker.py  _m0_crash_worker.py  test_amendment.py  test_auditor.py  test_cost_attribution.py  test_durable_event_store.py  test_durable_idempotency.py  test_e2e_composition.py  test_full_flow_kill_resume.py  test_m0_hardening.py  test_m0_idempotency.py  test_m2_role_contracts.py  test_m3_observability.py  test_m4_handbrake.py  test_m5_governance.py  test_m6_graduate_autonomy.py  test_m7_steward.py  test_observe.py  test_optimizer.py  test_runtime.py  test_runtime_sanitize.py  test_versions.py
