[project]
name = "agent-native-cell"
version = "0.1.0"
description = "One sovereign cell of the Agent-Native Enterprise (software-delivery MVP)."
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "mypy>=1.14", "ruff>=0.9"]

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP", "B"]

[tool.mypy]
files = ["src/cell"]
strict = true
# Wire payloads (events, intents, briefings) are open dicts by design (Build-Spec §1);
# bare generics are accepted, everything else is strict.
disallow_any_generics = false
